--- a/app/pages/index.jade
+++ b/app/pages/index.jade
@@ -1,6 +1,13 @@
+include ../blocks/header/header
+include ../blocks/main/main
+include ../blocks/footer/footer
+
 extends /blocks/layout-default/layout-default
 
 block head
-	- var pageTitle = 'CSSSR Project Template';
+	- var pageTitle = 'Shophia';
 
 block content
+	+header
+	+main
+	+footer
