--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -6,3 +6,15 @@ import('helpers/svg-size')
 @import 'helpers/optimize'
 
 import('../blocks/**/*')
+
+html
+	font-size $base_font_size
+
+body
+	font-size $base_font_size_ems
+	font-family sans-serif
+	font-weight 400
+	line-height 1.5
+	
+.display-flex
+	flexbox_display()
