--- a/app/blocks/main/main.styl
+++ b/app/blocks/main/main.styl
@@ -14,5 +14,18 @@
 .testimonials
 		background-color #d9bf8f
 	
-	&__column
+	.col-1-2
 		padding 0
+		color tomato
+		
+	&__title::after
+		position absolute
+		top 100%
+		left 37.1528%
+		width 25.6944%
+		content ''
+		
+		margin-top -2px
+		padding-bottom 2.4306%
+		background url('../images/triangle-22.png') no-repeat 
+		background-size cover
