--- a/app/blocks/testimonial/testimonial.styl
+++ b/app/blocks/testimonial/testimonial.styl
@@ -1,28 +1,39 @@
 .testimonial
 	display block
+	
+	padding-top 4.03%
+	padding-bottom 7.13%
 	clearfix()
 	
 	&__photo-wrapper
+		position relative
 		float left
-		width 40.31%
+		width 37.98%
+		padding-top 49.61%
+		
 		
 	&__photo
+		position absolute
+		left 0
+		bottom 0
 		width 100%
 		
 	&__body-wrapper
 		float left
 		width 59.69%
-	
-	&__body
-		display inline-block
+		height 100%
+		margin-top 10.85%
 		vertical-align bottom
+	
 		
 	&__text
 		font-size 1.125em
 		line-height 1.6667
 		color #fff
+
 		
 	&__author-name
+		margin-top 1.33em
 		font-size 1.875em
 		color #000
 		
@@ -32,12 +43,14 @@
 		color #7f7e7e
 		text-transform uppercase
 		
+		
 .testimonial
 	
 	&__photo-wrapper_right
 		float right
 		
-	&__body_right
+	&__body-wrapper_right
+		float right
 		text-align right
 		
 		
