--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -11,7 +11,7 @@
 		
 		z-index 10
 		padding-bottom 4.2361%
-		background url('../images/triangle.png') no-repeat 0 -1px
+		background url('../images/triangle-11.png') no-repeat 0 -1px
 		background-size 100% auto
 		// background-image linear-gradient(16.78deg, #fff 33.2%, transparent 34.5%),
 							// linear-gradient(343.22deg, #fff 33.2%, transparent 34.5%)
@@ -106,10 +106,7 @@
 	padding-y(10px)
 	overflow hidden
 	background-color #000
-	outline 1px solid gray
-	
-	
-	
+	outline 1px solid gray	
 	
 	&__selector
 		position absolute
