--- a/app/blocks/button/button.styl
+++ b/app/blocks/button/button.styl
@@ -1,4 +1,4 @@
-.btn
+.button
 	display inline-block
 	
 	padding 18px 24px 16px
@@ -9,8 +9,10 @@
 	
 	text-decoration none
 	text-transform uppercase
-	background-color #d49e7a
+	background-color #f2a471
 	border 1px solid transparent
+	
+	white-space nowrap
 	
 	cursor pointer
 	// transition: all 0.3s ease 0s;
