--- a/app/blocks/slider/slider.jade
+++ b/app/blocks/slider/slider.jade
@@ -14,7 +14,7 @@ mixin slider(slides)
 				img.slider-hero__img(src=img.src)
 				div.slider-hero__body
 					img.slider-hero__caption.slider-hero__caption_img(src=img.caption_img)
-					+button('Shop now')(class='slider-hero__btn')
+					+button('Shop now')(class='slider-hero__button')
 		div.slider__nav.slider-nav
 			
 			for _, ind in slides
