--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -55,7 +55,7 @@
 		width 19.2361% // 277px
 		// height 43.0124% // 277px
 		
-	&__btn
+	&__button
 		position absolute
 		left 50%
 		bottom 14.4144%
