--- a/app/blocks/layout-column/layout-column.styl
+++ b/app/blocks/layout-column/layout-column.styl
@@ -4,14 +4,23 @@
 [class*='col-']
 	float left
 	
-	padding-x(15px)
 	outline 1px dashed brown
 	
-.col-1-3 
+.col-1-3
 	width 33.3333%
+	
+	&:nth-child(3n)
+		margin-right 0
 
 .col-1-4
-	width 25%
+	// width 25%
+		
+	width 23.8095%
+	
+	margin-right 1.5873%
+	
+	&:nth-child(4n)
+		margin-right 0
 	
 .col-1-2
 	width 50%
