--- a/app/blocks/testimonial/testimonial.styl
+++ b/app/blocks/testimonial/testimonial.styl
@@ -1,7 +1,7 @@
-.testimonial
+/* .testimonial
 	display block
 	
-	padding-top 4.03%
+	padding-top 5.42%
 	padding-bottom 7.13%
 	clearfix()
 	
@@ -9,9 +9,41 @@
 		position relative
 		float left
 		width 37.98%
+		
 		padding-top 49.61%
 		
+	&__photo-wrapper_right
+		float right
 		
+	&__body-wrapper
+		float left
+		width 62.02%
+		
+		margin-top 10.85%
+		padding-x(15px)
+		
+	&__body-wrapper_right
+		float right
+		text-align right */
+		
+
+.testimonial
+	flexbox-display()
+	flex-align-items(flex-end)
+	
+	padding-top 5.42%
+	padding-bottom 7.13%
+	
+	
+	&__photo-wrapper
+		position relative
+		width 37.98%
+		
+		padding-top 49.61%
+		
+	&__photo-wrapper_right
+		flex-order(1)
+			
 	&__photo
 		position absolute
 		left 0
@@ -19,11 +51,12 @@
 		width 100%
 		
 	&__body-wrapper
-		float left
-		width 59.69%
-		height 100%
-		margin-top 10.85%
-		vertical-align bottom
+		width 62.02%
+		
+		padding-x(15px)
+		
+	&__body-wrapper_right
+		text-align right
 	
 		
 	&__text
@@ -42,15 +75,4 @@
 		line-height 2.1429
 		color #7f7e7e
 		text-transform uppercase
-		
-		
-.testimonial
-	
-	&__photo-wrapper_right
-		float right
-		
-	&__body-wrapper_right
-		float right
-		text-align right
-		
 		
