--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -26,7 +26,22 @@
 	background-color #f2f2f2
 	
 	&__phone
+		position relative
 		display inline-block
+		
+		padding-left 35px
+		
+		&::before
+			position absolute
+			top 50%
+			left 5px
+			width 10px
+			height 10px
+			
+			margin-top -5px
+			content ''
+			background url('../images/phone.png') no-repeat
+			
 		
 	&__account
 		float right
@@ -70,32 +85,16 @@
 		font-size 1.125em
 		line-height 1.6667
 
-.follow-menu
+.header__social
 	float right
 	
 	margin-top .75em
 	
-	&__item
-		display inline-block
+	&-item
 		width 34px
 		height 34px
 		
 		margin-right 6px
-		background url('../images/social-media.png') no-repeat
-		background-size cover
-		outline 1px dotted green
-		
-		&:first-child
-			background-position 0 0
-			
-		&:nth-child(2)
-			background-position -46px 0
-			
-		&:nth-child(3)
-			background-position -95px 0
-			
-		&:last-child
-			background-position -141px 0
 		
 .currency-selector
 	position relative
@@ -127,7 +126,11 @@
 		font-size 12px
 		line-height 18px
 		color #fff
+		
+		text-align center
 		text-transform uppercase
+		
+		
 		
 		
 		&::before
