--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -14,6 +14,19 @@
 		height 100%
 		outline 1px dashed tomato
 		
+		.index
+			position absolute
+			top 0
+			left 0
+			width 50px
+			height 50px
+			font-size 30px
+			font-weight bold
+			color tomato
+			border 1px dotted white
+			
+			z-index 100
+		
 	&__nav
 		position absolute
 		left 0
