--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -10,9 +10,12 @@
 		position absolute
 		top 0
 		left 0
+		display none
 		width 100%
 		height 100%
 		outline 1px dashed tomato
+		transition(display 1.5s ease-in-out) 
+		
 		
 		.index
 			position absolute
@@ -39,11 +42,7 @@
 		outline 1px dotted yellow
 		
 .slider-hero
-	display none
 	text-align center
-
-	&_active
-		display block
 		
 	&__img
 		position absolute
