--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -14,7 +14,10 @@
 		width 100%
 		height 100%
 		outline 1px dashed tomato
-		transition(display 1.5s ease-in-out) 
+		// transition(display 1.5s ease-in-out)
+		
+		&_active
+			display block
 		
 		
 		.index
