--- a/app/blocks/product/product.styl
+++ b/app/blocks/product/product.styl
@@ -16,8 +16,8 @@
 		
 	&__sale
 		position absolute
-		top 10px
-		left 10px
+		top 15px
+		left 15px
 		width 2.73em
 		height 2.73em
 		
@@ -39,21 +39,21 @@
 			font-size .5em
 			line-height 1
 			vertical-align middle
-	
+		
 	&__button
 		position absolute
 		left 50%
-		bottom 10%
+		bottom 16.5%
 		font-size .875em
 		line-height 2
 		color #fff
 		
-		padding 6px 14px
+		padding .43em 1em // 6px 14px
 		transform translate(-50%)
 		
 		&_add-to-card
 			bottom 0
-			padding 10px 8px 0
+			padding .71em .57em .28em // 10px 8px 0
 			background-color #000
 		
 			&::before
@@ -63,7 +63,7 @@
 				width 0
 				height 0
 				content ''
-				border 20px solid transparent
+				border 1.71em solid transparent
 				border-right-color #000
 				border-bottom-color #000
 				
@@ -74,7 +74,7 @@
 				width 0
 				height 0
 				content ''
-				border 20px solid transparent
+				border 1.71em solid transparent
 				border-left-color #000
 				border-bottom-color #000
 			
