--- a/app/blocks/button/button.styl
+++ b/app/blocks/button/button.styl
@@ -1,12 +1,12 @@
 .button
 	display inline-block
-	
-	padding 18px 24px 16px
-	font-size 24px
-	font-weight bold
+
+	padding .66em 1.125em .5em// 16px 27px 12px
+	font-size 1.5em // 24px
+	font-weight 700
 	line-height 1
 	text-align center
-	color fff
+	color #fff
 	
 	text-decoration none
 	text-transform uppercase
