--- a/app/blocks/head/head.jade
+++ b/app/blocks/head/head.jade
@@ -54,3 +54,10 @@ head
 	meta(name='keywords' content=pageKeywords || '')
 
 	link(href='/assets/styles/app.min.css' rel='stylesheet')
+
+	link(href="https://fonts.googleapis.com/css?family=Cormorant+Infant:600i|Volkhov:700i|Libre+Baskerville:400i|Spectral:600i|Noto+Serif:400i" rel="stylesheet")
+	link(href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:600i|Gentium+Basic:700|Gentium+Book+Basic:700|Maitree:500|Merriweather:700i|Playfair+Display:700i|Rokkitt:600" rel="stylesheet")
+
+	link(href="https://fonts.googleapis.com/css?family=Asap:500|Muli:300,400,600,700|Lato:300,400,700|Nunito+Sans:300,400,700|Poppins:400,500,600" rel="stylesheet")
+
+	link(href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i" rel="stylesheet")
