--- a/app/blocks/main/main.jade
+++ b/app/blocks/main/main.jade
@@ -8,10 +8,10 @@ include ../product/product
 mixin main()
 	+b('main').main&attributes(attributes)
 
-		- var slides = [{src: './assets/images/slide-2.png', caption_img: './assets/images/sale.png'}, {src: './assets/images/slide-2.png'}, {src: './assets/images/slide-2.png'}, {src: './assets/images/slide-2.png'}];
+		- var slides = [{src: './assets/images/slide-2.png'}, {src: './assets/images/slide-33.png'}, {src: './assets/images/slide-4.png'}, {src: './assets/images/slide-53.png'}];
 		
 		+slider(slides)
-		section.main__row.support
+		section.support.main__row.main__row_support
 			+container
 				.col-1-3.support__col
 					.support__item.support__item_left
@@ -29,10 +29,10 @@ mixin main()
 						p.support__text= '24/7 support'
 						p.support__text_sm= 'Lifetime support'
 
-		section.main__row
-			+title('HandPicked')
+		section.featured.main__row.main__row_featured
+			+title('HandPicked')(class='featured__title')
 
-			- var featured = [{link: {href: '#', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-1_sm.png', alt: 'Some info'}, button: 'Buy now'}, {link: {href: '#', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-2_sm.png', alt: 'Some info'}}, {link: {href: '#', target: '_blank', class: 'featured__product featured__product_lg'}, img: {src: './assets/images/featured-3_lg.png', alt: 'Some info'}}, {link: {href: '#', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-4_sm.png', alt: 'Some info'}}, {link: {href: '#', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-5_sm.png', alt: 'Some info'}}];
+			- var featured = [{link: {href: '#', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-1_sm.png', alt: 'Some info'}, button: 'Shop now'}, {link: {href: '#', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-2_sm.png', alt: 'Some info'}}, {link: {href: '#', target: '_blank', class: 'featured__product featured__product_lg'}, img: {src: './assets/images/featured-3_lg.png', alt: 'Some info'}}, {link: {href: '#', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-4_sm.png', alt: 'Some info'}}, {link: {href: '#', target: '_blank', class: 'featured__product featured__product_sm'}, img: {src: './assets/images/featured-5_sm.png', alt: 'Some info'}}];
 
 			+container
 				ul.col-1-3.featured__col.featured__col_sm
@@ -49,10 +49,10 @@ mixin main()
 					li.featured__item
 						+product(featured[4])
 				
-		section.main__row
-			+title('Summer Collection')
+		section.recent-products.main__row.main__row_recent-products
+			+title('Summer Collection')(class='recent-products__title')
 
-			- var products = [{link: {href: '#', target: '_blank', class: 'products__product'}, img: {src: './assets/images/product-1.png', alt: 'Some info'}, sale: '20', button: '+ Add to card'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-2.png', alt: 'Some info'}, button: '+ Add to card'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-3.png', alt: 'Some info'}, button: '+ Add to card'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-4.png', alt: 'Some info'}, sale: '40', button: '+ Add to card'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-5.png', alt: 'Some info'}, sale: '20', button: '+ Add to card'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-6.png', alt: 'Some info'}, button: '+ Add to card'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-7.png', alt: 'Some info'}, button: '+ Add to card'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-8.png', alt: 'Some info'}, sale: '40', button: '+ Add to card'}];
+			- var products = [{link: {href: '#', target: '_blank', class: 'products__product'}, img: {src: './assets/images/product-1.png', alt: 'Some info'}, sale: '20', button: '+ Add to cart'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-2.png', alt: 'Some info'}, button: '+ Add to cart'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-3.png', alt: 'Some info'}, button: '+ Add to cart'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-4.png', alt: 'Some info'}, sale: '40', button: '+ Add to cart'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-5.png', alt: 'Some info'}, sale: '20', button: '+ Add to cart'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-6.png', alt: 'Some info'}, button: '+ Add to cart'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-7.png', alt: 'Some info'}, button: '+ Add to cart'}, {link: {href: '#', class: 'products__product'}, img: {src: './assets/images/product-8.png', alt: 'Some info'}, sale: '40', button: '+ Add to cart'}];
 
 			+container
 				ul.products
@@ -60,20 +60,20 @@ mixin main()
 						li.products__item.col-1-4
 							+product(product, 'product__button_add-to-card')
 				
-		section.main__row
-			+title('Our Brand')
+		section.brands.main__row.main__row_brands
+			+title('Our Brand')(class='brands__title')
 			+container
 				- var brands = [{src: './assets/images/brand-bakery.png', alt: 'Bakery'}, {src: './assets/images/brand-cavalier.png', alt: 'Cavalier'}, {src: './assets/images/brand-harvest.png', alt: 'Harvest'}, {src: './assets/images/brand-landlock.png', alt: 'Landlock'}, {src: './assets/images/brand-spectrum.png', alt: 'Spectrum'}, {src: './assets/images/brand-home-energy.png', alt: 'Home Energy'}];
 				
 				each i in brands
-					+layout-column(class='col-1-' + brands.length)
+					+layout-column(class='brands__column col-1-' + brands.length)
 						.brand
 							img.brand__img(src=i.src alt=i.alt)
 
-		section.testimonials.main__row_testimonials
+		section.testimonials.main__row.main__row_testimonials
 			+title('Customers Says')(class='testimonials__title')
-			+container
-				- var testimonials = [{photo: './assets/images/SandraDewi.png', txt: 'Sed ut perspiciatis <br> unde omnis iste natus error sit <br> voluptate accusantium doloremque', authorName: 'Sandra Dewi', authorJob: 'Fashion stylish'}, {photo: './assets/images/ShaheerSheikh.png', txt: 'Sed ut perspiciatis <br> unde omnis iste natus error sit <br> voluptate accusantium doloremque', authorName: 'Shaheer Sheikh', authorJob: 'Designer'}];
+			+container(class='testimonials__container')
+				- var testimonials = [{photo: './assets/images/SandraDewi.png', txt: 'Sed ut perspiciatis <br> unde omnis iste natus error sit <br> voluptatem accusantium doloremque', authorName: 'Sandra Dewi', authorJob: 'Fashion stylish'}, {photo: './assets/images/ShaheerSheikh.png', txt: 'Sed ut perspiciatis <br> unde omnis iste natus error sit <br> voluptatem accusantium doloremque', authorName: 'Shaheer Sheikh', authorJob: 'Designer'}];
 				
 				+layout-column.testimonials__column.col-1-2
 					+testimonial(testimonials[0])
