--- a/app/blocks/slider/slider.styl
+++ b/app/blocks/slider/slider.styl
@@ -5,19 +5,23 @@
 	
 	padding-bottom 48.0556%
 	outline 1px solid green
+	// opacity .6
 	
 	&__item
 		position absolute
 		top 0
 		left 0
-		display none
+		// display none
 		width 100%
 		height 100%
 		outline 1px dashed tomato
-		// transition(display 1.5s ease-in-out)
+		opacity 0
+		transition(opacity 1.5s ease-in-out)
+		
 		
 		&_active
-			display block
+			// display block
+			opacity 1
 		
 		
 		.index
@@ -39,7 +43,7 @@
 		bottom 0
 		width 100%
 		
-		padding-y(2.0139%)
+		padding-y(2.45%)
 		line-height 0
 		text-align center
 		outline 1px dotted yellow
@@ -73,7 +77,7 @@
 	&__button
 		position absolute
 		left 50%
-		bottom 14.4144%
+		bottom 90px
 		transform translate(-50%)
 		
 .slider-nav
@@ -81,6 +85,8 @@
 		display inline-block
 		width 18px
 		height 19px
+		
+		margin-right 5px
 		background url('../images/slider-nav.png') no-repeat
 		outline 1px solid brown
 		
