--- a/app/blocks/testimonial/testimonial.styl
+++ b/app/blocks/testimonial/testimonial.styl
@@ -31,15 +31,15 @@
 	flexbox-display()
 	flex-align-items(flex-end)
 	
-	padding-top 5.42%
-	padding-bottom 7.13%
+	padding-top 1.875em
+	padding-bottom 3.125em
 	
 	
 	&__photo-wrapper
 		position relative
-		width 37.98%
+		width 39.3798% // 254px/645px
 		
-		padding-top 49.61%
+		padding-top 49.6124% // 320px/645px
 		
 	&__photo-wrapper_right
 		flex-order(1)
@@ -51,7 +51,7 @@
 		width 100%
 		
 	&__body-wrapper
-		width 62.02%
+		width 60.6202%
 		
 		padding-x(15px)
 		
@@ -60,19 +60,25 @@
 	
 		
 	&__text
+		font-family 'Playfair Display', serif
 		font-size 1.125em
+		font-style italic
 		line-height 1.6667
 		color #fff
 
 		
 	&__author-name
-		margin-top 1.33em
+		margin-top 1.6em
+		font-family 'Playfair Display', serif
 		font-size 1.875em
+		font-style italic
 		color #000
+		
+		font-weight 700
 		
 	&__author-job
 		font-size .875em
-		line-height 2.1429
+		line-height 2.75
 		color #7f7e7e
 		text-transform uppercase
 		
