--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -11,10 +11,23 @@ html
 	font-size $base_font_size
 
 body
+
 	font-size $base_font_size_ems
-	font-family sans-serif
+	// font-family 'Spectral', serif
+	// font-family 'Volkhov', serif
+	// font-family 'Libre Baskerville', serif
+	// font-family 'Noto Serif', serif
+	// font-family 'Cormorant Infant', serif
+	// font-family 'Cormorant Garamond', serif
+	// -------------------------------
+	// font-family 'Muli', sans-serif
+	// font-family 'Poppins', sans-serif
+	// font-family 'Nunito Sans', sans-serif 
+	font-family 'Lato', sans-serif 
 	font-weight 400
 	line-height 1.5
+	// background url('../images/shophia.jpg') no-repeat 0 0
+		 
 	
 a
 	color inherit
